# simgear

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  HISTORY.md  README.md  SimGearConfig.cmake.in  vcpkg.json
simgear/: CMakeLists.txt  constants.h  simgear_config_cmake.h.in  simgear_precompile.h  simgear_scene_precompile.h
simgear/bucket/: newbucket.cxx  newbucket.hxx  test_bucket.cxx
simgear/bvh/: BVHBoundingBoxVisitor.hxx  BVHLineSegmentVisitor.cxx  BVHLineSegmentVisitor.hxx  BVHMaterial.hxx  BVHNearestPointVisitor.hxx  BVHPager.hxx  BVHStaticGeometryBuilder.hxx  BVHStaticTriangle.cxx  BVHStaticTriangle.hxx  BVHSubTreeCollector.cxx  BVHSubTreeCollector.hxx  BVHTerrainTile.cxx  BVHTerrainTile.hxx  BVHVisitor.hxx  CMakeLists.txt  bvhtest.cxx
simgear/canvas/: CMakeLists.txt  Canvas.cxx  Canvas.hxx  CanvasEvent.cxx  CanvasEvent.hxx  CanvasEventManager.cxx  CanvasMgr.cxx  CanvasMgr.hxx  CanvasObjectPlacement.cxx  CanvasWindow.cxx  CanvasWindow.hxx  ODGauge.cxx  ODGauge.hxx
simgear/canvas/elements/: CanvasElement.cxx  CanvasElement.hxx  CanvasGroup.cxx  CanvasGroup.hxx  CanvasImage.cxx  CanvasImage.hxx  CanvasMap.cxx  CanvasPath.cxx  CanvasText.cxx  CanvasText.hxx
simgear/canvas/events/: CanvasKeyBinding.cxx  CanvasKeyBinding.hxx
simgear/canvas/layout/: BoxLayout.cxx  BoxLayout.hxx  CMakeLists.txt  GridLayout.cxx  GridLayout.hxx  Layout.cxx  Layout.hxx  LayoutItem.cxx  LayoutItem.hxx  NasalWidget.hxx  SpacerItem.hxx  canvas_layout_test.cxx
simgear/debug/: ErrorReportingCallback.hxx  LogCallback.cxx  LogCallback.hxx  LogEntry.hxx  Reporting.hxx  debug_types.h  logstream.cxx  logstream.hxx
simgear/embedded_resources/: EmbeddedResourceManager.hxx
simgear/emesary/: test_emesary.cxx
simgear/environment/: metar.cxx  metar.hxx  test_metar.cxx  visual_enviro.hxx
simgear/ephemeris/: ephemeris.hxx  moonpos.hxx  star.hxx  stardata.hxx
simgear/hla/: RTIData.hxx
simgear/io/: DNSClient.cxx  DNSClient.hxx  HTTPClient.cxx  HTTPClient.hxx  HTTPRepository.cxx  HTTPRepository_private.hxx  SGDataDistributionService.hxx  lowlevel.cxx  raw_socket.cxx  raw_socket.hxx  sg_netBuffer.hxx  sg_serial.hxx  sg_socket.cxx  sg_socket.hxx  sg_socket_udp.hxx  test_DNS.cxx  test_repository.cxx  untar.cxx  untar.hxx
simgear/io/iostreams/: gzcontainerfile.cxx  sgstream.cxx
simgear/magvar/: magvar.hxx
simgear/math/: SGGeod.hxx  SGIntersect.hxx  SGMisc.hxx  SGVec2.hxx  SGVec3.hxx  SGVec4.hxx  interpolater.hxx  sg_random.cxx  sg_random.hxx  simd.hxx  simd4x4.hxx  simd4x4_neon.hxx  simd_neon.hxx
simgear/misc/: CMakeLists.txt  ResourceManager.cxx  ResourceManager.hxx  SimpleMarkdown.hxx  inputcolor.cxx  inputcolor.hxx  inputvalue.cxx  inputvalue.hxx  interpolator.hxx  lru_cache.hxx  sg_dir.hxx  sg_path.cxx  sg_path.hxx  strutils.cxx  strutils.hxx  strutils_test.cxx  texcoord.cxx
simgear/nasal/cppbind/: NasalContext.hxx  NasalHash.hxx  NasalObjectHolder.hxx
simgear/package/: Catalog.cxx  CatalogTest.cxx  Install.cxx  Package.cxx  Root.cxx  pkgutil.cxx
simgear/props/: AtomicChangeListener.cxx  PropertyBasedElement.cxx  condition.cxx  propertyObject_test.cxx  props.cxx  props.hxx  props_io.cxx  props_test.cxx
simgear/scene/dem/: SGDemSession.hxx  SGMesh.cxx  SGMesh.hxx
simgear/scene/material/: Atlas.cxx  Atlas.hxx  Effect.cxx  Effect.hxx  EffectCullVisitor.cxx  Technique.cxx  TextureBuilder.cxx  makeEffect.cxx  mat.cxx  mat.hxx  matlib.cxx  matlib.hxx  mipmap.cxx
simgear/scene/model/: BVHDebugCollectVisitor.hxx  BVHPageNodeOSG.cxx  BVHPageNodeOSG.hxx  BoundingVolumeBuildVisitor.hxx  CMakeLists.txt  ModelRegistry.cxx  PrimitiveCollector.cxx  PrimitiveCollector.hxx  ReaderWriterGLTF.cxx  ReaderWriterGLTF.hxx  SGLight.cxx  SGLight.hxx  SGMaterialAnimation.cxx  SGPBRAnimation.cxx  SGPickAnimation.cxx  SGPickAnimation.hxx  SGReaderWriterXML.cxx  SGText.cxx  SGTrackToAnimation.cxx  animation.cxx  animation.hxx  model.cxx  modellib.hxx  particles.hxx  placement.cxx  shadanim.cxx
simgear/scene/sky/: CMakeLists.txt  CloudShaderGeometry.cxx  cloud.hxx  cloudfield.cxx  cloudfield.hxx  dome.cxx  dome.hxx  galaxy.cxx  galaxy.hxx  moon.cxx  moon.hxx  newcloud.hxx  oursun.cxx  oursun.hxx  sky.cxx  sky.hxx  sphere.cxx  sphere.hxx  stars.cxx  stars.hxx
simgear/scene/tgdb/: AreaFeatureBin.cxx  AreaFeatureBin.hxx  CMakeLists.txt  CoastlineBin.cxx  CoastlineBin.hxx  LightBin.cxx  LightBin.hxx  LineFeatureBin.hxx  ObjectInstanceBin.cxx  ObjectInstanceBin.hxx  ReaderWriterSTG.cxx  ReaderWriterSTG.hxx  SGBuildingBin.cxx  SGBuildingBin.hxx  SGNodeTriangles.hxx  SGOceanTile.cxx  SGTexturedTriangleBin.hxx  SGTileDetailsCallback.hxx  TreeBin.cxx  (+15 more)
simgear/screen/: CMakeLists.txt  video-encoder-internal.hxx  video-encoder.cxx  video-encoder.hxx
simgear/serial/: serial.hxx
simgear/sound/: aeonwave_test1.cxx  filters.hxx  openal_test1.cxx  sample.cxx  sample.hxx  sample_group.cxx  sample_group.hxx  soundmgr.hxx  soundmgr_aeonwave.cxx  soundmgr_openal.cxx  soundmgr_test.cxx  soundmgr_test2.cxx  xmlsound.cxx  xmlsound.hxx
simgear/structure/: CMakeLists.txt  OSGUtils.cxx  OSGUtils.hxx  SGAction.cxx  SGBinding.cxx  SGBinding.hxx  SGExpression.cxx  SGExpression.hxx  SGSharedPtr.hxx  SGSmplhist.hxx  SGSourceLocation.cxx  SGSourceLocation.hxx  SGWeakPtr.hxx  SGWeakReferenced.hxx  callback.hxx  commands.cxx  event_mgr.cxx  event_mgr.hxx  event_mgr_test.cxx  exception.cxx  exception.hxx  subsystem_mgr.cxx  subsystem_mgr.hxx
simgear/threads/: SGQueue.hxx  SGThread.hxx
simgear/timing/: CMakeLists.txt  rawprofile.hxx  sg_time.cxx  sg_time.hxx  timezone.cxx  timezone.h  zonetest.cxx
simgear/xml/: XMLStaticParser.hxx  easyxml.cxx
(+59 files in other folders)
